addressbookWebTests/src/test/resources/log.txt


C:\Users\Антон\Downloads\Java-course\java_courses\addressbookWebTests>gradlew te
st
:compileJava UP-TO-DATE
:processResources UP-TO-DATE
:classes UP-TO-DATE
:compileTestJava
C:\Users\└эЄюэ\Downloads\Java-course\java_courses\addressbookWebTests\src\test\j
ava\javaForTesters\tests\ContactDetailedInformationTest.java:51: error: illegal
start of expression
            .stream().filter((s) -> ! s.equals("") ).map(ContactDetailedInformat
ionTest::cleaned)
                                  ^
C:\Users\└эЄюэ\Downloads\Java-course\java_courses\addressbookWebTests\src\test\j
ava\javaForTesters\tests\ContactDetailedInformationTest.java:51: error: ')' expe
cted
            .stream().filter((s) -> ! s.equals("") ).map(ContactDetailedInformat
ionTest::cleaned)

       ^
C:\Users\└эЄюэ\Downloads\Java-course\java_courses\addressbookWebTests\src\test\j
ava\javaForTesters\tests\ContactDetailedInformationTest.java:51: error: illegal
start of expression
            .stream().filter((s) -> ! s.equals("") ).map(ContactDetailedInformat
ionTest::cleaned)

        ^
C:\Users\└эЄюэ\Downloads\Java-course\java_courses\addressbookWebTests\src\test\j
ava\javaForTesters\tests\ContactDetailedInformationTest.java:51: error: ';' expe
cted
            .stream().filter((s) -> ! s.equals("") ).map(ContactDetailedInformat
ionTest::cleaned)

                ^
C:\Users\└эЄюэ\Downloads\Java-course\java_courses\addressbookWebTests\src\test\j
ava\javaForTesters\tests\ContactPhoneTest.java:45: error: illegal start of expre
ssion
            .stream().filter((s) -> ! s.equals("") )
                                  ^
C:\Users\└эЄюэ\Downloads\Java-course\java_courses\addressbookWebTests\src\test\j
ava\javaForTesters\tests\ContactPhoneTest.java:52: error: illegal start of expre
ssion
            .stream().filter((s) -> ! s.equals("")).map(ContactPhoneTest::cleane
d)
                                  ^
C:\Users\└эЄюэ\Downloads\Java-course\java_courses\addressbookWebTests\src\test\j
ava\javaForTesters\tests\ContactPhoneTest.java:52: error: ')' expected
            .stream().filter((s) -> ! s.equals("")).map(ContactPhoneTest::cleane
d)
                                                                        ^
C:\Users\└эЄюэ\Downloads\Java-course\java_courses\addressbookWebTests\src\test\j
ava\javaForTesters\tests\ContactPhoneTest.java:52: error: illegal start of expre
ssion
            .stream().filter((s) -> ! s.equals("")).map(ContactPhoneTest::cleane
d)
                                                                         ^
C:\Users\└эЄюэ\Downloads\Java-course\java_courses\addressbookWebTests\src\test\j
ava\javaForTesters\tests\ContactPhoneTest.java:52: error: ';' expected
            .stream().filter((s) -> ! s.equals("")).map(ContactPhoneTest::cleane
d)

 ^
C:\Users\└эЄюэ\Downloads\Java-course\java_courses\addressbookWebTests\src\test\j
ava\javaForTesters\tests\GroupCreationTest.java:36: error: illegal start of expr
ession
return groups.stream().map((g)->new Object[] {g}).collect(Collectors.toList()).i
terator();
                               ^
C:\Users\└эЄюэ\Downloads\Java-course\java_courses\addressbookWebTests\src\test\j
ava\javaForTesters\tests\GroupCreationTest.java:52: error: illegal start of expr
ession
    return groups.stream().map((g)->new Object[] {g}).collect(Collectors.toList(
)).iterator();
                                   ^
C:\Users\└эЄюэ\Downloads\Java-course\java_courses\addressbookWebTests\src\test\j
ava\javaForTesters\tests\GroupCreationTest.java:65: error: illegal start of expr
ession
        assertThat(after, equalTo(before.withAdded(group.withId(after.stream().m
apToInt((g)->g.getId()).max().getAsInt()))));

            ^
C:\Users\└эЄюэ\Downloads\Java-course\java_courses\addressbookWebTests\src\test\j
ava\javaForTesters\tests\UserCreationTest.java:36: error: illegal start of expre
ssion
    return accounts.stream().map((g)->new Object[] {g}).collect(Collectors.toLis
t()).iterator();
                                     ^
C:\Users\└эЄюэ\Downloads\Java-course\java_courses\addressbookWebTests\src\test\j
ava\javaForTesters\tests\UserCreationTest.java:49: error: illegal start of expre
ssion
      assertThat(after, equalTo(before.withAdded(account.withId(after.stream().m
apToInt((g) -> g.getId()).max().getAsInt()))));

             ^
14 errors
:compileTestJava FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug
option to get more log output.

BUILD FAILED

Total time: 8.034 secs

C:\Users\Антон\Downloads\Java-course\java_courses\addressbookWebTests>